2013-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c,
	  support/regression/tests/bug-2222.c:
	  Fix bugs #2222, 2223.

2013-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/SDCClrange.c:
	  Check more carefully for undead hiding among the living variables.

2013-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/astlcs90,
	  Makefile.common.in,
	  Makefile.in,
	  configure.in:
	  Integrate Rainer Keuchel's TLCS-90 assembler.

2013-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Remove redundant jumps.

2013-09-22 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/configure.in,
	  device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic16/supported-devices.ac,
	  device/non-free/lib/pic16/configure,
	  device/lib/pic16/configure: fixed bash dependencies

2013-09-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient stack adjustment when optimizing for code size.

2013-09-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genEndFunction): applied patch 207 to fix bug 2221,
	  Thanks Alex Burton!
	* support/regression/tests/bug-2221.c: new, added

2013-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Refactor testing for literal bytes, more efficient cast from unsigned.

2013-09-20 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/configure.in,
	  device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic16/supported-devices.ac,
	  device/non-free/lib/pic16/configure,
	  device/lib/pic16/configure:
	  fixed bug #2220 Detection of 16 bit pic devices supported by gputils
	  is not working correctly on Cygwin environment

2013-09-19 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,
	  device/include/pic14/pic16regs.h,
	  device/non-free/include/pic14/pic16f1704.h,
	  device/non-free/include/pic14/pic16f1708.h,